# GF_WorkSpace

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Doc/: CMake引用子工程的方式有哪些？.md  Code Style  LVGL Use Tips  README.md
Modules/: CMakeLists.txt
Modules/Core/: app.c  bitmap.h  cpu.c  flag_group.c  gf.h  hooks.c  list.c  main.c  mbox.h  mem_block.c  mem_block.h  mutex.h  os.h  os_config.h  sem.c  sem.h  switch.c  task.c  task.h
Modules/Utilities/algorithm/: _link  sort.c  sort.cpp  一阶滞后滤波.cpp  中位值滤波.cpp  冒泡排序.c  加权递推平均滤波.cpp  卡尔曼滤波.cpp  基数排序.c  堆排序.c  希尔排序.c  归并排序.c  快速排序.c  插入排序.c  桶排序.c  消抖滤波.cpp  滑动平均滤波.cpp  算术平均滤波.cpp  计数排序.c  选择排序.c  防脉冲干扰平均滤波.cpp  限幅平均滤波.cpp  限幅消抖滤波.cpp  限幅滤波.cpp
Modules/Utilities/encrypt/: TEA.c  TEA.h
Project/Qt_Tools/Logic/: CH347.cpp  CH347.h
Script/CMake/: compilers.cmake  target template.cmake
Scripts/CMake/: Config.cmake  GoogleTest.cmake  asr1603-setenv.bat  asr1603.toolchain.cmake  compilers.cmake  freetype.cmake  functions.cmake  lua.cmake  lv_drivers.cmake  lv_port_pc_visual_studio.cmake  lv_port_pc_vscode.cmake  lvgl.cmake  toolchain-esp32.cmake
ThirdPart/: CMakeLists.txt
ThirdPart/CmBackTrace/: Hard Fault定位利器——开源组件CmBacktrace.md
ThirdPart/fatfs/: CMakeLists.txt
ThirdPart/fatfs/ff15/source/: diskio.c  ffconf.h
ThirdPart/hilink/: CMakeLists.txt
ThirdPart/lua/: lua_test.c
ThirdPart/lvgl/: CMakeLists.txt
apps/: CMakeLists.txt
apps/device/: demofile.c  demofile.h
apps/device/display/: lcd.c  lcd.h  lcd_init.c  lcd_init.h  lcdfont.h
apps/device/display/max7219/: max7219.c  max7219.h
apps/device/display/ws2812/: ws2812b.cpp  ws2812b.h
apps/device/e-Paper/Config/: DEV_Config.c  DEV_Config.h  Debug.h
apps/device/e-Paper/Examples/: EPD_1in02_test.c  EPD_1in54_test.c  EPD_1in54b_V2_test.c  EPD_1in54b_test.c  EPD_1in54c_test.c  EPD_2in13_V2_test.c  EPD_2in13_test.c  EPD_2in13b_V3_test.c  EPD_2in13bc_test.c  EPD_2in13d_test.c  EPD_2in66_test.c  EPD_2in66b_test.c  EPD_2in7_test.c  EPD_2in7b_test.c  EPD_2in9_V2_test.c  EPD_2in9_test.c  EPD_2in9b_V3_test.c  EPD_2in9bc_test.c  EPD_2in9d_test.c  EPD_3in7_test.c  EPD_4in01f_test.c  EPD_4in2b_V2_test.c  EPD_4in2bc_test.c  EPD_5in65f_test.c  EPD_5in83_V2_test.c  EPD_5in83_test.c  EPD_5in83b_V2_test.c  EPD_5in83bc_test.c  EPD_7in5_HD_test.c  EPD_7in5_V2_test.c  EPD_7in5_test.c  EPD_7in5b_HD_test.c  EPD_7in5b_V2_test.c  EPD_7in5bc_test.c  EPD_Test.h
apps/device/e-Paper/GUI/: GUI_Paint.c
apps/device/e-Paper/e-Paper/: EPD_1in02d.c  EPD_1in54.c  EPD_1in54_V2.c  EPD_1in54b_V2.c  EPD_1in54b_V2.h  EPD_1in54c.c  EPD_2in13.c  EPD_2in13_V2.c  EPD_2in13b_V3.c  EPD_2in13bc.c  EPD_2in13d.c  EPD_2in66.c  EPD_2in66.h  EPD_2in66b.c  EPD_2in66b.h  EPD_2in7.c  EPD_2in7b.c  EPD_2in9.c  EPD_2in9_V2.c  EPD_2in9_V2.h  EPD_2in9b_V3.c  EPD_2in9b_V3.h  EPD_2in9d.c  EPD_4in01f.h  EPD_4in2.c  EPD_4in2b_V2.c  EPD_4in2b_V2.h  EPD_5in65f.h  EPD_5in83.c  EPD_5in83_V2.c  EPD_5in83_V2.h  EPD_5in83b_V2.c  EPD_5in83b_V2.h  EPD_5in83bc.c  EPD_7in5.c  EPD_7in5b_HD.c  EPD_7in5b_V2.c  EPD_7in5b_V2.h  EPD_7in5bc.c
apps/device/motor/: sg90.c  sg90.h
apps/device/rfid/rc522/: rc522.c  rc522.h
apps/device/sensor/aht21/: aht21.c  aht21.h
apps/device/sensor/bmp280/: bmp280.h
apps/device/sensor/dht11/: gf_dht11.c  gf_dht11.h
apps/device/sensor/ds18b20/: ds18b20.c  ds18b20.h
apps/device/sensor/ens160/: ens160.cpp  ens160.h
apps/device/sensor/mpu6050/: mpu6050.c  mpu6050.h
apps/device/sensor/sgp30/: sgp30.c  sgp30.h
apps/draft/: CMakeLists.txt
apps/draft/FATFS/: CMakeLists.txt  main.c
apps/draft/HILINK_FPM383C_80X64/: CMakeLists.txt  main.cpp
apps/draft/HILINK_FPM383C_80X64/hilink_src/: demo.c  fingerprint_action.c  fingerprint_action.h  fingerprint_device.c  fingerprint_device.h  fingerprint_protocol.c  fingerprint_protocol.h  fingerprint_type.h
apps/draft/QueueForMcu/: queue.c
apps/draft/fingerprint/: CMakeLists.txt  R503S.cpp  R503S.h
apps/draft/test_cmake/: CMakeLists.txt
apps/draft/test_cmake/common/: CMakeLists.txt  utils.cpp  utils.h
apps/draft/test_cmake/test1/: CMakeLists.txt  main.cpp
apps/draft/test_cmake/test2/: CMakeLists.txt  main.cpp
apps/draft/test_cmake/test_windows_app/: CMakeLists.txt  main.cpp
apps/draft/undefined/: CMakeLists.txt  main.cpp
apps/drivers/i2c/: soft_i2c.c  soft_i2c.h
apps/drivers/spi/: soft_spi.c  soft_spi.h
apps/drivers/uart/: soft_uart.c  soft_uart.h
apps/lv_port_pc_cmake/: CMakeLists.txt  LvglWindowsSimulator.cpp
apps/stm32f103c8/: CMakeLists.txt  stm32f103c8_blue_pill.cfg
apps/stm32f103c8/Core/Core/: app.c  bitmap.c  cpu.c  cpu.h  event.c  event.h  flag_group.h  hooks.h  list.h  main.c  mbox.c  mutex.c  os.h  os_config.h  switch.c  switch.h  timer.c  timer.h  tinyOS.h
apps/stm32f103c8/Core/GF/: README.md  application.c  gf_comment.h  gf_startup.c
apps/stm32f103c8/Core/Inc/: main.h  stm32f1xx_it.h
apps/stm32f103c8/Core/Src/: adc.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_it.c  tim.c
